Numass control update